[package]
name = "mysync"
version = "0.1.0"
edition = "2024"
license = "0BSD"
description = "Sync a local MySQL/MariaDB database to match a mysqldump file by touching only the tables and rows that changed"
repository = "https://github.com/201nz/mysync"
readme = "README.md"
keywords = ["mysql", "mariadb", "mysqldump", "database-sync", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
# gzip-decompress dump files
flate2 = "1"
# MySQL/MariaDB wire protocol client (sync API, matches the current
# per-table processing model; threads instead of async for parallel tables)
mysql = "26"
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }
# fast byte scanning for the statement splitter / tokenizer
memchr = "2"

[profile.release]
lto = true
codegen-units = 1

[workspace]
